# NeuroEvolution

./: CMakeLists.txt  README.md
cmake/: config.cmake  macros.cmake
code/include/: functions.hpp  io_utils.hpp  io_utils.inl  matrix.hpp  matrix.inl  neural_network.hpp  neural_network_synthetizer.hpp  serialization.hpp  types.hpp
code/src/: functions.cpp  io_utils.cpp  main.cpp  neural_network.cpp  neural_network_synthetizer.cpp  serialization.cpp
